[gd_scene load_steps=8 format=2]

[ext_resource path="res://assets/images/botao_sair.png" type="Texture" id=1]
[ext_resource path="res://Spript/Main.gd" type="Script" id=3]
[ext_resource path="res://Scenes/Configuracao.tscn" type="PackedScene" id=4]
[ext_resource path="res://admob-lib/admob.gd" type="Script" id=5]
[ext_resource path="res://assets/images/inicio.png" type="Texture" id=6]
[ext_resource path="res://assets/images/botao_iniciar.png" type="Texture" id=7]
[ext_resource path="res://assets/images/botao_configuracao.png" type="Texture" id=8]

[node name="Main" type="Node2D"]
script = ExtResource( 3 )

[node name="Background" type="Sprite" parent="."]
position = Vector2( 2.1189, 0 )
texture = ExtResource( 6 )
centered = false

[node name="Iniciar" type="TextureButton" parent="."]
margin_left = 184.347
margin_top = 597.537
margin_right = 510.347
margin_bottom = 922.537
texture_normal = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Configuracao" type="TextureButton" parent="."]
margin_left = 602.238
margin_top = 6.33498
margin_right = 702.238
margin_bottom = 106.335
texture_normal = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sair" type="TextureButton" parent="."]
margin_left = 7.23792
margin_top = 8.35678
margin_right = 107.238
margin_bottom = 109.357
texture_normal = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PopupConfiguracao" parent="." instance=ExtResource( 4 )]

[node name="AdMob" type="Node" parent="."]
script = ExtResource( 5 )
banner_on_top = false
banner_id = "ca-app-pub-3940256099942544/6300978111"
interstitial_id = "ca-app-pub-3940256099942544/1033173712"
rewarded_id = "ca-app-pub-3940256099942544/5224354917"
[connection signal="pressed" from="Iniciar" to="." method="_on_Iniciar_pressed"]
[connection signal="pressed" from="Iniciar" to="AdMob" method="_on_Iniciar_pressed"]
[connection signal="pressed" from="Configuracao" to="." method="_on_Configuracao_pressed"]
[connection signal="pressed" from="Sair" to="." method="_on_Sair_pressed"]
